--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Snake</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="/assets//pictures//snakeIcon.ico">
+    <link rel="icon" href="/assets/pictures/snakeIcon.ico">
 </head>
 <body>
     <div id="playGuide">use arrow keys to play</div>
@@ -18,6 +18,6 @@
 
     
     <div id="detail" style="font-size: 25px;">only avaliable to PC currently</div>
-<script src="/index.js"></script>
+<script src="index.js"></script>
 </body>
 </html>
