--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <title>Snake</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="assets/pictures/snakeIcon.ico">
+    <link rel="icon" href="/assets/pictures/snakeIcon.ico">
 </head>
 <body>
     <div id="playGuide">use arrow keys to play</div>
@@ -15,9 +15,18 @@
         <button id="resetBtn">Reset</button>
     </div>
 
+    <div class="mobileCtr">
+        <button id="upBtn" class="ctrBtn" style="visibility: visible;">UP</button>
+    </div>
+    <div class="mobileCtr">
+        <button id="leftBtn" class="ctrBtn" style="visibility: visible;">LEFT</button>
+        <button id="rightBtn" class="ctrBtn" style="visibility: visible;">RIGHT</button>
+    </div>
+    <div class="mobileCtr">
+        <button id="downBtn" class="ctrBtn"  style="visibility: visible;">DOWN</button>
+    </div>
 
-    
-    <div id="detail" style="font-size: 25px;">only avaliable to PC currently</div>
+    <div id="detail" style="font-size: 25px; ">only avaliable to PC currently</div>
 <script src="index.js"></script>
 </body>
 </html>
