--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <button id="downBtn" class="ctrBtn"  style="visibility: visible;">DOWN</button>
     </div>
 
-    <div id="detail" style="font-size: 25px; ">only avaliable to PC currently</div>
+    <div id="detail" style="font-size: 25px; ">avaliable to all devices</div>
 <script src="index.js"></script>
 </body>
 </html>
